@@ -67,6 +67,10 @@ typedef krb5_error_code (*git_decrypt_proc) PROTOTYPE((krb5_context,
 						       const krb5_keyblock *,
 						       krb5_const_pointer,
 						       krb5_kdc_rep * ));
+
+static krb5_error_code make_preauth_list PROTOTYPE((krb5_context, 
+						    krb5_preauthtype *,
+						    int, krb5_pa_data ***));
 /*
  * This function sends a request to the KDC, and gets back a response;
  * the response is parsed into ret_err_reply or ret_as_reply if the
@@ -429,7 +433,7 @@ krb5_get_in_tkt(context, options, addrs, ktypes, ptypes, key_proc, keyseed,
      * preauth_to_use list.
      */
     if (ptypes) {
-	retval = make_preauth_list(context, ptypes, &preauth_to_use);
+	retval = make_preauth_list(context, ptypes, -1, &preauth_to_use);
 	if (retval)
 	    goto cleanup;
     }
